updated user model to auto gen id

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://GUNA:j4PTCOMv4486g8bC@vibe-chat-test.bpggwy0.mongodb.net/?appName=VIBE-CHAT-TEST
 JWT_SECRET=VIBE-CHAT-TEST-SECRET
+ID_SECRET=VIBE-UNDHI-BABY
 PORT=5000
