Auth and profile updates in server

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGO_URI=mongodb+srv://GUNA:j4PTCOMv4486g8bC@vibe-chat-test.bpggwy0.mongodb.net/?appName=VIBE-CHAT-TEST
+# MONGO_URI=mongodb+srv://GUNA:j4PTCOMv4486g8bC@vibe-chat-test.bpggwy0.mongodb.net/?appName=VIBE-CHAT-TEST
+MONGO_URI=mongodb+srv://vibechat03_db_user:5VIHA1RiNHKRKMUB@vibechat.tt3gphp.mongodb.net/?appName=vibechat
 JWT_SECRET=VIBE-CHAT-TEST-SECRET
 ID_SECRET=VIBE-UNDHI-BABY
 PORT=5000
@@ -6,3 +7,5 @@ PORT=5000
 # Arcjet Rate Limiting
 ARCJET_KEY=ajkey_01kfn827f9fp48ptv1gknyfpbg
 ARCJET_ENV=development
+
+
